using System;
using System.Collections.Generic;
using CourseMarketplaceBE.Domain.Enums;

namespace CourseMarketplaceBE.Domain.Entities;

public partial class Course
{
    public int CourseId { get; set; }

    public int? InstructorId { get; set; }

    public int? CategoryId { get; set; }

    public int? CouponId { get; set; }

    public string Title { get; set; } = null!;

    public string? Description { get; set; }

    public decimal Price { get; set; }

    public string? CourseThumbnailUrl { get; set; }

    public DateTime? CreatedAt { get; set; }

    public DateTime? UpdatedAt { get; set; }

    public string? CourseStatus { get; set; }

    public int? CourseFlagCount { get; set; }

    // TotalLessons, RatingAverage, TotalStudents đã bị xóa trong SQL v2
    // Dùng VIEW view_course_stats để lấy các giá trị này (tính động)

    public virtual ICollection<CourseAiIntegration> CourseAiIntegrations { get; set; } = new List<CourseAiIntegration>();
    



    public virtual ICollection<CartItem> CartItems { get; set; } = new List<CartItem>();

    public virtual Category? Category { get; set; }

    public virtual Coupon? Coupon { get; set; }

    public virtual ICollection<Enrollment> Enrollments { get; set; } = new List<Enrollment>();

    public virtual Instructor? Instructor { get; set; }

    public virtual ICollection<Lesson> Lessons { get; set; } = new List<Lesson>();

    public virtual ICollection<OrderItem> OrderItems { get; set; } = new List<OrderItem>();

    public virtual ICollection<WishlistItem> WishlistItems { get; set; } = new List<WishlistItem>();

    public virtual CourseExt? CourseExt { get; set; }

    public virtual ICollection<CourseQuiz> CourseQuizzes { get; set; } = new List<CourseQuiz>();

    public virtual ICollection<CourseFieldModerationFeedback> FieldModerationFeedbacks { get; set; } = new List<CourseFieldModerationFeedback>();

    public string? WhatYouWillLearn { get; set; }

    public string? Requirements { get; set; }

    public string? ModerationFeedback { get; set; }
    public DateTime? LastApprovedAt { get; set; }
    public bool IsRemoved { get; set; }
    public AiThreatLevel ThreatLevel { get; set; } = AiThreatLevel.None;
}
