using System;
using System.Collections.Generic;

namespace CourseMarketplaceBE.Domain.Entities;

public partial class Lesson
{
    public int LessonId { get; set; }

    public int? CourseId { get; set; }

    public string Title { get; set; } = null!;

    public string? Description { get; set; }

    public string? ThumbnailUrl { get; set; }

    public DateTime? CreatedAt { get; set; }

    public DateTime? UpdatedAt { get; set; }

    public string? LessonStatus { get; set; }

    public string? ModerationFeedback { get; set; }

    public virtual Course? Course { get; set; }

    public virtual ICollection<LearningMaterial> LearningMaterials { get; set; } = new List<LearningMaterial>();


    public virtual ICollection<LessonReview> LessonReviews { get; set; } = new List<LessonReview>();

    public bool IsRemoved { get; set; }
}
