classDiagram
direction LR

%% ==================== FRONTEND ====================

class QuestionBankControllerFE["QuestionBankController"] {
    <<frontend controller>>
    + GetQuestions(lessonId: int) Task~IActionResult~
}

%% ==================== BACKEND - CONTROLLER ====================

class QuestionBankControllerBE["QuestionBankController"] {
    <<backend controller>>
    - _questionBankService : IQuestionBankService
    
    + GetQuestionsByLesson(lessonId: int) Task~ActionResult~List~QuizQuestionResponse~~~
    - GetCurrentUserId() int
}

%% ==================== BACKEND - DTOs ====================

class QuizQuestionResponse {
    <<dto>>
    + QuestionId : int
    + CourseId : int
    + LessonId : int?
    + QuestionText : string
    + Explanation : string?
    + QuestionType : QuizQuestionType
    + Options : List~QuizOptionResponse~
}

class QuizOptionResponse {
    <<dto>>
    + OptionId : int
    + OptionText : string
    + IsCorrect : bool
    + OrderIndex : int
}

%% ==================== BACKEND - DOMAIN ENTITIES ====================

class QuizQuestion {
    <<entity>>
    + QuestionId : int
    + CourseId : int
    + LessonId : int
    + QuestionText : string
    + Explanation : string?
    + QuestionType : QuizQuestionType
    + CreatedAt : DateTime?
}

class QuizOption {
    <<entity>>
    + OptionId : int
    + QuestionId : int
    + OptionText : string
    + IsCorrect : bool
    + OrderIndex : int
}

class Lesson {
    <<entity>>
    + LessonId : int
    + CourseId : int
    + Title : string
}

class Course {
    <<entity>>
    + CourseId : int
    + Title : string
}

%% ==================== BACKEND - SERVICE INTERFACES ====================

class IQuestionBankService {
    <<service interface>>
    + GetQuestionsByLessonAsync(lessonId: int, instructorId: int) Task~List~QuizQuestionResponse~~ *
}

class IQuestionBankRepository {
    <<repository interface>>
    + GetQuestionsByLessonAsync(lessonId: int) Task~List~QuizQuestion~~ *
}

class ILessonRepository {
    <<repository interface>>
    + GetByIdAsync(lessonId: int) Task~Lesson?~ *
}

class ICourseRepository {
    <<repository interface>>
    + GetByIdAsync(courseId: int) Task~Course?~ *
}

%% ==================== BACKEND - SERVICE IMPLEMENTATION ====================

class QuestionBankService {
    <<service>>
    - _questionBankRepository : IQuestionBankRepository
    - _courseRepository : ICourseRepository
    - _lessonRepository : ILessonRepository
    
    + GetQuestionsByLessonAsync(lessonId: int, instructorId: int) Task~List~QuizQuestionResponse~~
}

%% ==================== RELATIONSHIPS ====================

%% === COMPOSITION (filled diamond) ===
QuizQuestionResponse *-- QuizOptionResponse
QuizQuestion *-- QuizOption

%% === UNIDIRECTIONAL ASSOCIATION (solid arrow) ===
QuestionBankControllerBE --> IQuestionBankService
QuestionBankService --> IQuestionBankRepository
QuestionBankService --> ICourseRepository
QuestionBankService --> ILessonRepository

%% === INTERFACE REALIZATION ===
QuestionBankService ..|> IQuestionBankService

%% === DEPENDENCY (dashed arrows) ===
QuestionBankControllerFE ..> QuestionBankControllerBE
QuestionBankControllerBE ..> QuizQuestionResponse
QuestionBankService ..> QuizQuestionResponse
QuestionBankService ..> QuizQuestion
QuestionBankService ..> Lesson
IQuestionBankRepository ..> QuizQuestion
ILessonRepository ..> Lesson

%% ==================== STYLES ====================

classDef default fill:#FFFFFF,stroke:#000000,stroke-width:1px,color:#000000
